@@ -196,7 +196,7 @@ sub xst_network_conf_get
 			    [ workgroup,     \&xst_parse_ini,               SMB_CONF, "global", "workgroup" ],     
 			    [ description,   \&xst_parse_ini,               SMB_CONF, "global", "server string" ],    
 			    [ winsserver,    \&xst_parse_ini,               SMB_CONF, "global", "wins server" ],
-			    [ interface,    \&xst_network_interfaces_get ]
+			    [ interface,     \&xst_network_interfaces_get ]
 			    ]
 				 }
 	  );
